h2 to Cosmos